k8snetworkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ubnp
  namespace: users-backend
spec:
  podSelector:  {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: users-backend
      ports:
        - protocol: TCP
          port: 80

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: users-backend
      ports:
        - protocol: TCP
          port: 80
