k8snetwrokpolicy2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ubnp
  namespace: users
spec:
  podSelector:  {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
      ports:
        - protocol: TCP
          port: 80
  egress:
      ports:
        - protocol: TCP
          port: 80
